--- a/vaIn_ref_figure_biasVariance_Hastie__.tex
+++ b/vaIn_ref_figure_biasVariance_Hastie__.tex
@@ -21,10 +21,10 @@ The four possible combinations of high
 \cite{vapnik-nature2013}
 \cite{cherkassky-learning2007}
 
-Related to estimating the true expected prediction error of the underlying distribution with finite samples.
+Vapnik and Chervonenkis (VC) have worked on establishing a theoretical framework for expected predictive error estimation of the underlying distribution from finite samples. A modern introduction to this work is written in \cite{cherkassky-learning2007}, establishing a common ground for multiple machine learning methods. The principles and issues explained in the aforementioned work can be expanded to any probabilistic method that intends to predict an output from inputs. The book extends over various topics but here we will focus on a specific result and the ideas around it. In no way does this correspond to a complete introduction to VC or risk minimization theory.
 
-VC dimension true error rate minimization. 
-
+To present the main result we must introduce two notions:
+shattering and the VC dimension.
 
 \begin{definition}{Shattering}
 
