--- a/vaIn_ref_figure_biasVariance_Hastie__.tex
+++ b/vaIn_ref_figure_biasVariance_Hastie__.tex
@@ -6,7 +6,7 @@ At first the bias of the model is high both for the training and testing sets. T
 prediction 
 show different curves of prediction error for different models built and tested on samples of the training and testing set respectively in blue and red colors. As the model increases co
 
-An opposite scneario scenario occurs when
+An opposite scneario scenario occurs whenb
 
 rise Typical combinations
 The four possible combinations of high 
@@ -45,7 +45,7 @@ The Vapnik–Chervonenkis Dimension (VC) of a class of binary functions is the c
 The VC dimension gives a certain criteria for measuring the complexity of a class of binary functions by measuring its expressiveness. Note that the VC dimension need not be finite. Refer to \cite{cherkassky-learning2007} Pg. 113 for examples of different VC classes, finite and infinite.
 
 It can be proven that if a class of binary classifiers is of finite VC dimension, then the n-th shattering coefficient is bounded by a polynomial of order equal to the dimension 
-i.e. $\Delta_n(\mathcal {F}) \leq O(n^(VC))$ \footnote{$O(\cdot)$ corresponds to Big-O notation.} where $VC$ stands for the VC dimension of the class.
+i.e. $\Delta_n(\mathcal {F}) \leq O(n^{VC})$ \footnote{$O(\cdot)$ corresponds to Big-O notation.} where $VC$ stands for the VC dimension of the class.
 
 These concepts show that for
 
