--- a/vaIn_ref_figure_biasVariance_Hastie__.tex
+++ b/vaIn_ref_figure_biasVariance_Hastie__.tex
@@ -21,7 +21,10 @@ The four possible combinations of high
 \cite{vapnik-nature2013}
 \cite{cherkassky-learning2007}
 
-Vapnik and Chervonenkis (VC) have worked on establishing a theoretical framework for expected predictive error estimation. Using only finite samples from the underlying distribution they propose a nonparametric way to estimate this difference, given a class of learners. A modern introduction to this work is written in \cite{cherkassky-learning2007}, establishing a common ground for multiple machine learning methods. The principles and issues explained in the aforementioned work can be expanded to any probabilistic method that intends to predict an output from inputs. The book extends over various topics but here we will focus on a specific result and the ideas around it. In no way does this correspond to a complete introduction to VC or risk minimization theory.
+Vapnik and Chervonenkis (VC) have worked on establishing a theoretical framework for expected prediction error ($EPE$) estimation. Using only finite samples from the underlying distribution they propose nonparametric methods to constructively estimate this difference, given a class of learners. A recent introduction to this work can be found in \cite{cherkassky-learning2007}, where this framework is explored on a variety of machine learning methods. The principles and issues explained in the aforementioned work can be expanded to any probabilistic method that intends to predict an output from inputs. This book extends over various topics, however here we will focus on a specific result and the ideas surrounding it. Thus in no way does is this brief recall meant to be a thorough introduction to VC or risk minimization theory.
+
+
+
 
 To present the main result we must first introduce two notions: shattering and the VC dimension.
 
