--- a/header.tex
+++ b/header.tex
@@ -8,6 +8,7 @@
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{qtree} %para dibujar grafos/arboles
+\usepackage{algorithm2e} %to write pseudocode algorithms
 
 %lazy boldface..
 %\let\b\textbf
