--- a/Expect_calG_calN_calE_calL__.tex
+++ b/Expect_calG_calN_calE_calL__.tex
@@ -107,7 +107,7 @@ $\calG \calN \calE \calL$
  %\sum_{i=0}^{\infty} a_i x^i
  \end{equation}
  
- Once the model was fit on the training set, it overfits when predictions on training samples are very accurate whilst predictions on new samples spread out. The model has learned very well from the training data but fails to be accurate on new samples.
+ Once the model was fit on the training set, it overfits when predictions on training samples are very accurate whilst predictions on new samples spread out and raise the value of the error. The model has learned very well from the training data but fails to be accurate on new samples.
  
  A trivial algorithm that would 
  
