--- a/textbf_Overfitting_subsection_Brief_comment__.tex
+++ b/textbf_Overfitting_subsection_Brief_comment__.tex
@@ -9,7 +9,7 @@
 
 The Vapnik–Chervonenkis (VC) Dimension is a number based on a theoretical framework now called \textit{Statistical Learning Theory} (SLT). This theory is used to estimate the true expected prediction error from finite samples. Surprisingly, very few assumptions are needed and results are distribution independent. Exact bounds are given for some common use cases with constructive analytical methods. For other cases authors propose sampling or experimental methods to estimate the VC dimension. For this part, most of the results and reasoning follows \cite{cherkassky-learning2007}. For a more broad development of this work, \cite{vapnik-nature2013} is recommended too.
 
-In a supervised learning context, we use the empirical training ($\overline{err}$) or test errors ($\overline{err}_{test}$) to estimate the $EPE$. A particular learner is fit and then used to predict new values. We would have $\mathrm{T} = (\textbf{X},\textbf{Y})$ as our training set of $n$ samples   and $Y = \{0,1 \}$. Now let $\mathcal {F}$ be a class of classifiers where $f: X \rightarrow Y \, \forall f \in \mathcal {F}$. 
+In a supervised learning context, we use the empirical training ($\overline{err}$) or test errors ($\overline{err}_{test}$) to estimate the $EPE$. A particular learner is fit and then used to predict new values. We would have $\mathrm{T} = (\textbf{X},\textbf{Y})$ as our training set of $n$ samples   and $Y = \{0,1 \}$. Now let $\mathcal {F}$ be a class of classifiers where $f: X \rightarrow Y \, \forall f \in \mathcal {F}$. As it was seen before in INSERT CORRECT SECTION, a common problem in supervised learning is overfitting. In practice this is common when $n$ is \textit{small} or when the number of features is \textit{large}. SLT theory provides theory to effectively characterize these dimensions in a constructive way. Analytical bounds are given for a number of algorithms which allows us to estimate the distance between the empirical error and the generalization error.
 
 In Vapnik and Chervonenkis's work, they focus on estimation of the prediction error through the convergence and consistency of the training error. In applications, a learner is fit from a class of functions. These, for example in logistic regression, can be indexed by the values of the feature's weights $\theta$. This class will represent the set from which to produce the final model.
 
